# EARL

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  EARL-language-reference.html  EARL-language-reference.org  EARL.cabal  LICENSE  README.html  README.md  README.org  cmake_uninstall.cmake.in  input.earl  input.txt  other.earl  other2.earl  release.rl  run.sh  stress-test.py  style-guide.html  style-guide.org
src/: #intrinsics.cpp#  .#intrinsics.cpp  Ast.hs  Doxyfile  EARL-value.c  EVM-routines.c  EVM.c  Err.hs  Interpreter.hs  Lexer.hs  Makefile  Makefile.am  Parser.hs  StdLibModules.jsx  Token.hs  arena.c  arena.cpp  arena.h  ast.c  ast.cpp  ast.h  autodoc.cpp  bake.py  bool.cpp  build.sh  builtin-idents.cpp  builtins.c  char-intrinsics.cpp  char.cpp  class-ctx.cpp  class.cpp  clexer.h  closure-ctx.cpp  closure.cpp  common.cpp  compiler.c  configure.ac  ctx.c  ctx.cpp  debug-build  (+95 more)
src/compiling/: compiler.c  ctx.c
src/ds/: pair.c  s-umap.c  s-uset.c  str.c
src/editors/: earl.el  earl.vim
src/global/: keywords.c
src/grammar/: __type.cpp  expr-array-access.cpp  expr-binary.cpp  expr-bool.cpp  expr-case.cpp  expr-charlit.cpp  expr-closure.cpp  expr-dict.cpp  expr-floatlit.cpp  expr-fstr.cpp  expr-funccall.cpp  expr-get.cpp  expr-ident.cpp  expr-intlit.cpp  expr-listlit.cpp  expr-mod-access.cpp  expr-none.cpp  expr-predicate.cpp  expr-range.cpp  expr-set.cpp  expr-slice.cpp  expr-strlit.cpp  expr-subarray.cpp  expr-tuple.cpp  expr-unary.cpp  program.cpp  stmt-bash-literal.cpp  stmt-block.cpp  stmt-break.cpp  stmt-class.cpp  stmt-continue.cpp  stmt-def.cpp  stmt-enum.cpp  stmt-exec.cpp  stmt-expr.cpp  stmt-for.cpp  stmt-foreach.cpp  stmt-if.cpp  stmt-import.cpp  stmt-info.cpp  (+12 more)
src/include/: #earl.hpp#  .#earl.hpp  EARL-value.h  EVM-routines.h  EVM.h  arena.h  arena.hpp  ast.h  ast.hpp  attr.h  autodoc.hpp  builtin-sigs.h  builtins.h  common.h  common.hpp  compiler.h  config.h.in  ctx.h  ctx.hpp  earl-to-py.hpp  earl-value.h  earl.hpp  earlfunc.hpp  earlty.hpp  earlvar.hpp  err.h  err.hpp  expr.h  hash.h  hashtbl.h  hidden-file.hpp  hot-reload.hpp  identifier.h  int.h  interpreter.h  interpreter.hpp  intrinsics.hpp  keywords.h  lexer.h  lexer.hpp  (+24 more)
src/include/compiling/: compiler.h  ctx.h
src/include/ds/: pair.h  s-umap.h  s-uset.h  str.h
src/include/global/: keywords.h
src/include/lexing/: lexer.h  token.h
src/include/mem/: mem.h
src/include/misc/: arena.h  err.h  hash.h  log.h  utils.h
src/include/parsing/: ast.h  expr.h  parser.h  stmt.h
src/include/runtime/: EARL-object.h  EARL-value.h  builtin-sigs.h  builtins.h  identifier.h  types.h
src/lexing/: lexer.c  token.c
src/mem/: arena.c  mem.c
src/member-intrinsics/: bool-intrinsics.cpp  char-intrinsics.cpp  dict-intrinsics.cpp  file-intrinsics.cpp  int-intrinsics.cpp  list-intrinsics.cpp  option-intrinsics.cpp  str-intrinsics.cpp  time-intrinsics.cpp  tuple-intrinsics.cpp
src/misc/: arena.c  hash.c  utils.c
src/parsing/: ast.c  expr.c  parser.c  stmt.c
src/primitives/: bool.cpp  break.cpp  builtin-function-reference.c  char.cpp  class.cpp  classref.cpp  closure.cpp  continue.cpp  dict.cpp  enum.cpp  file.cpp  float.cpp  functionref.cpp  int.c  int.cpp  list.cpp  module.cpp  obj.cpp  option.cpp  os.cpp  predicate.cpp  range.cpp  return.cpp  slice.cpp  str.cpp  this.cpp  time.cpp  tuple.cpp  typeKW.cpp  unit.c  void.cpp
src/runtime/: EARL-object.c  EARL-value.c  builtins.c  identifier.c  types.c
src/runtime/VM/: EVM-routines.c  EVM.c  opcode.c
src/runtime/primitives/: boolean.c  builtin-function-reference.c  function.c  integer.c  string.c  unit.c
src/std/: #io.earl#  #list.earl#  .#io.earl  .#list.earl  assert.earl  asserts.earl  basic-lexer.earl  char.earl  char.rl  colors.earl  csv.earl  encryption.earl  io.earl  io.rl  linked-list.earl  list.earl  list.rl  logging.earl  math.earl  math.rl  matrix.earl  os.earl  queue.earl  script.earl  script.rl  scripting.earl  set-avl.earl  set.earl  stack.earl  std.earl  str.earl  system.earl  system.rl  time.earl  toml.earl  toml.rl  tree.earl  utils.earl
src/std/containers/: interval-tree.rl  queue.rl  stack.rl
src/std/datatypes/: char.rl  dictionary.rl  list.rl  str.rl
src/std/parsers/: basic-lexer.rl  toml.rl
src/stdlib-docs-gen/: lexer.earl  main.earl  std-docs-gen.earl  token.earl
src/test/: Makefile.am  create-test.sh  input.1.txt  point-class.1.earl  test-std.earl  test-suite.c  test-suite.cpp  test-suite.h  test-suite.hpp
src/test/conditionals/: test-conditionals.cpp  test-conditionals.hpp
src/test/earl-tests/: char-module-tests.earl  char-module-tests.rl  char-tests.earl  char-tests.rl  class-tests.earl  class-tests.rl  cmds.txt  encryption-module-tests.earl  encryption-module-tests.rl  enum-tests.earl  enum-tests.rl  float-tests.earl  float-tests.rl  fn-test.earl  fn-test.rl  for-loops-tests.earl  for-loops-tests.rl  foreach-loop-tests.earl  foreach-loop-tests.rl  if-tests.earl  if-tests.rl  import-tests.earl  import-tests.rl  int-tests.earl  int-tests.rl  intrinsics-tests.earl  intrinsics-tests.rl  io-module-tests.earl  io-module-tests.rl  list-tests.earl  list-tests.rl  main.earl  option-tests.earl  option-tests.rl  other.1.earl  other.2.earl  point-class.1.earl  runner.sh  test-std.earl  test-utils.earl  (+12 more)
src/test/functions/: test-functions.cpp  test-functions.hpp
src/test/hashtbl/: test-hashtbl.c  test-hashtbl.h
src/test/lexer/: test-lexer.cpp  test-lexer.h
src/test/loops/: test-loops.cpp  test-loops.hpp
src/test/pair/: test-pair.c  test-pair.h
src/test/parsers/: test-parsers.c  test-parsers.cpp  test-parsers.h  test-parsers.hpp
src/test/sample-input/: README.md  conditionals-if.1.earl  conditionals-if.2.earl  conditionals-if.3.earl  expect-keyword.1.in  expect-type.1.in  expect.1.in  expect.2.in  functions-basic-no-return.1.earl  functions-count-evens.1.earl  functions-return-passed-param.1.earl  functions-return-summed-element.1.earl  functions-world-attribute.1.earl  lexer-idents.1.in  lexer-keywords.1.in  lexer-symbols.1.in  lock-file.sh  loops-for.1.earl  loops-for.2.earl  loops-for.3.earl  stmt-let.1.in  (+11 more)
(+321 files in other folders)
